# Direct3D12Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Framework/: CMakeLists.txt
Framework/include/: App.h  ColorTarget.h  CommandList.h  ConstantBuffer.h  EnumUtil.h  Fence.h  ImguiUtil.h  IndexBuffer.h  Material.h  Mesh.h  RenderType.h  Texture.h  VertexBuffer.h  WindowEvent.h
Framework/project/: Framework.vcxproj  Framework.vcxproj.filters
Framework/src/: App.cpp  ColorTarget.cpp  CommandList.cpp  ConstantBuffer.cpp  DepthTarget.cpp  DescriptorPool.cpp  Fence.cpp  ImguiUtil.cpp  IndexBuffer.cpp  Material.cpp  Mesh.cpp  Texture.cpp  VertexBuffer.cpp  WindowEvent.cpp
Sample/: CMakeLists.txt
Sample/include/: ImguiUtil.h  SampleApp.h
Sample/project/: Sample.sln  Sample.vcxproj  Sample.vcxproj.filters
Sample/res/: Common.hlsl  GGXPS.hlsl  GGXVS.hlsl  Hit.hlsl  Miss.hlsl  RayGen.hlsl
Sample/res/buster_sword/: sword.mtl
Sample/src/: ImguiUtil.cpp  SampleApp.cpp  main.cpp
